--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     }
   #input, #output{
     width:150px;
-    height: 150px;
+    height: 25px;
     border: 1px solid black;
   }
   .mainBody{
@@ -23,7 +23,7 @@
 <div class="mainBody">
   <h1></h1>
   <h2>Input</h2>
-  <div id="input"></div>
+  <input type ='text' id='input'></input>
   <h2>Output</h2>
   <div id="output"></div>
   <button id="save">Save</button>
