completion of the stack challenge

--- a/index.html
+++ b/index.html
@@ -8,10 +8,16 @@
     width: 1000px;
     margin: auto;
     }
-  #input, #output{
+  #input{
     width:150px;
     height: 25px;
     border: 1px solid black;
+  }
+  #output{
+    width:150px;
+    height: auto;
+    padding: 5px;
+
   }
   .mainBody{
     width: 100%;
@@ -24,10 +30,11 @@
   <h1></h1>
   <h2>Input</h2>
   <input type ='text' id='input'></input>
-  <h2>Output</h2>
-  <div id="output"></div>
   <button id="save">Save</button>
   <button id="dump">Dump</button>
+  <h2>Output</h2>
+  <div id="output"></div>
+
 </div>
 
 
