stretch goal is at the bottom of the html file

--- a/index.html
+++ b/index.html
@@ -41,3 +41,5 @@
   </body>
   <script src="js/stackchallenge.js" type="text/javascript"></script>
 </html>
+
+<!-- stretch goals for stack trace are to display each one on it's own line, and have the ability to remove one from any position by clicking on an [x] button rendered next to it-->
